--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 0x01-ES6_promise/node_modules
 0x02-ES6_classes/node_modules
 0x03-ES6_data_manipulation/node_modules
+0x04-TypeScript/node_modules/
+0x04-TypeScript/task_0/node_modules/
+0x05-Node_JS_basic/node_modules/
+0x05-Node_JS_basic/package-lock.json
